--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/headerfooter.css">
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/scrip.js" defer></script>
+    <script src="js/script.js" defer></script>
     <title>Document</title>
 </head>
 
